Include new gc flags into loop.sh